                      User-Visible AFS::PAG Changes

1.01 (unreleased)

    Mark autodie required for configure and use for correct automated
    testing behavior on Perl 5.10.0.  (autodie was added to core in
    5.10.1.)

1.00 (2013-09-12)

    Initial public release with support for libkafs, libkopenafs, and
    Linux systems with no support library.  pioctl is not yet supported,
    only hasafs, haspag, setpag, and unlog.  The build system has only
    been tested on Debian.